@@ -33,6 +33,33 @@ enableJavaPerformanceTesting()
 description = "Apache Beam :: SDKs :: Java :: Testing :: JPMS Tests"
 ext.summary = "E2E test for Java 9 modules"
 
+// Java 17 needs compileJava to add-exports and add-opens for error prone
+if (project.hasProperty("compileAndRunTestsWithJava17")) {
+  def java17Home = project.findProperty("java17Home")
+  project.tasks.withType(JavaCompile) {
+    options.fork = true
+    options.forkOptions.javaHome = java17Home as File
+    options.compilerArgs += ['-Xlint:-path']
+    options.compilerArgs.addAll(['--release', '17'])
+    // Error prone requires some packages to be exported/opened for Java 17
+    // Disabling checks since this property is only used for Jenkins tests
+    // https://github.com/tbroyer/gradle-errorprone-plugin#jdk-16-support
+    options.errorprone.errorproneArgs.add("-XepDisableAllChecks")
+    options.forkOptions.jvmArgs += [
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+            "-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+            "-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
+    ]
+  }
+}
+
 /*
  * List of runners to run integration tests on.
  */
@@ -55,13 +82,13 @@ def spark_version = '3.1.1'
 def spark_scala_version = '2.12'
 
 dependencies {
-  compile project(path: ":sdks:java:core", configuration: "shadow")
-  compile project(path: ":sdks:java:extensions:google-cloud-platform-core")
+  implementation project(path: ":sdks:java:core", configuration: "shadow")
+  implementation project(path: ":sdks:java:extensions:google-cloud-platform-core")
 
-  testCompile library.java.junit
-  testCompile library.java.hamcrest_core
+  testImplementation library.java.junit
+  testImplementation library.java.hamcrest
 
-  baseIntegrationTest project(path: ":sdks:java:testing:jpms-tests", configuration: "testRuntime")
+  baseIntegrationTest project(path: ":sdks:java:testing:jpms-tests", configuration: "testRuntimeMigration")
   directRunnerIntegrationTest project(":runners:direct-java")
   flinkRunnerIntegrationTest project(":runners:flink:${project.ext.latestFlinkVersion}")
   dataflowRunnerIntegrationTest project(":runners:google-cloud-dataflow-java")
@@ -106,6 +133,7 @@ plugins.withType(JavaPlugin).configureEach{
 // JPMS requires JDK > 8
 project.tasks.each {
   it.onlyIf {
-    JavaVersion.VERSION_1_8.compareTo(JavaVersion.current()) < 0
+    project.hasProperty("compileAndRunTestsWithJava17")
+            || JavaVersion.VERSION_1_8.compareTo(JavaVersion.current()) < 0
   }
 }
